fixed searchbar's overlapping issue on mobile device

--- a/packages/gatsby-theme-portal/src/search/autocomplete.css
+++ b/packages/gatsby-theme-portal/src/search/autocomplete.css
@@ -16,6 +16,7 @@
     position: absolute;
     transform: translateY(50%);
     width: 100vw;
+    z-index: 2;
   }
 }
 
